Push apos teste funcionar

--- a/.github/workflows/rodando_balanco.yml
+++ b/.github/workflows/rodando_balanco.yml
@@ -34,9 +34,13 @@ jobs:
             git config --global user.email "sehnemjeferson@gmail.com"
             git config --global user.name "Jeferson Sehnem"
         - name: Commit and push changes
-          run: |
-            git add .
-            git commit -m "Coletando balanco patrimonial em: $(date +'%Y-%m-%d')"
-            git push
           env:
             GITHUB_TOKEN: ${{ secrets.ACTIONS_FUNDAMENTS }}
+          run: |
+              git add .
+              if git diff-index --quiet HEAD; then
+                  echo "No changes to commit"
+                  exit 0
+              fi
+              git commit -m "Coletando dre em: $(date +'%Y-%m-%d')"
+              git push https://Jeferson100:${{ secrets.ACTIONS_FUNDAMENTS }}@github.com/Jeferson100/fundamentalist-stock-brazil.git HEAD:main
