--- a/.github/workflows/rodando_fluxo_caixa.yml
+++ b/.github/workflows/rodando_fluxo_caixa.yml
@@ -1,7 +1,7 @@
-name: Scraping balanco patrimonial
-on: 
+name: Scraping Fluxo de caixa
+on:
   schedule:
-    - cron: "0 6 15 1,4,7,9 *"
+    - cron: "0 10 15 1,4,7,9 *"
   workflow_dispatch:
 jobs:
     build:
@@ -27,20 +27,21 @@ jobs:
           run: |
             cd ./codigos_rodando
             pwd
-            python rodando_balanco_patrimonial.py
+            python rodando_fluxo_caixa.py
 
         - name: Configure Git
           run: |
             git config --global user.email "sehnemjeferson@gmail.com"
             git config --global user.name "Jeferson Sehnem"
+
         - name: Commit and push changes
           env:
-            GITHUB_TOKEN: ${{ secrets.ACTIONS_FUNDAMENTS }}
+              GITHUB_TOKEN: ${{ secrets.ACTIONS_FUNDAMENTS }}
           run: |
-              git add .
-              if git diff-index --quiet HEAD; then
-                  echo "No changes to commit"
-                  exit 0
-              fi
-              git commit -m "Coletando dre em: $(date +'%Y-%m-%d')"
-              git push https://Jeferson100:${{ secrets.ACTIONS_FUNDAMENTS }}@github.com/Jeferson100/fundamentalist-stock-brazil.git HEAD:main
+            git add .
+            if git diff-index --quiet HEAD; then
+                echo "No changes to commit"
+                exit 0
+            fi
+            git commit -m "Coletando dre em: $(date +'%Y-%m-%d')"
+            git push https://Jeferson100:${{ secrets.ACTIONS_FUNDAMENTS }}@github.com/Jeferson100/fundamentalist-stock-brazil.git HEAD:main
