--- a/.github/workflows/rodando_margens.yml
+++ b/.github/workflows/rodando_margens.yml
@@ -1,7 +1,9 @@
 name: Scraping Retornos e Margens
 on:
-  schedule:
-    - cron: "0 7 15 1,4,7,9 *"
+  workflow_run:
+    workflows: ["Scraping Fluxo de caixa"]
+    types:
+      - completed
   workflow_dispatch:
 jobs:
     build:
